--- a/src/assets/styles/components/_slider.scss
+++ b/src/assets/styles/components/_slider.scss
@@ -4,16 +4,14 @@ $root-block-name: '.slider';
   $p: &;
   $p__text: #{$p}__text;
   $p__item: #{$p}__item;
-  height: 480px;
-
+  margin-bottom: 48px;
   &__item {
     position: relative;
     &-img {
-      width: 834px;
+      display: block;
+      width: 100%;
       height: 100%;
-      padding: 0 40px;
-      height: auto;
-      border-radius: 10px;
+      object-fit: cover;
     }
 
     &::after {
@@ -24,14 +22,6 @@ $root-block-name: '.slider';
       width: 100%;
       height: 100%;
       background: rgba(255, 255, 255, 0.5);
-    }
-  }
-
-  .slick-center {
-    #{$p__item} {
-      &::after {
-        display: none;
-      }
     }
   }
 
@@ -49,4 +39,22 @@ $root-block-name: '.slider';
       right: 0;
     }
   }
+}
+
+.swiper-slide {
+  width: 80%;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.swiper-slide-active {
+  .slider__item {
+    &::after {
+      display: none;
+    }
+  }
+}
+.swiper-button-prev,
+.swiper-button-next {
+  color: #000;
 }
