--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -39,6 +39,7 @@ $root-block-name: '.header';
     margin-left: 40px;
     @include w_h(132px, 132px);   
     @include screen(lg) {
+      margin-left: 20px;
       @include w_h(68px, 68px); 
     }
     &-img {
