--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -27,6 +27,8 @@ $root-block-name: '.productCard';
     height: 396px;
     img {
       border-radius: 30px 30px 0 0;
+      width: 100%;
+      height: 100%;
     }
     position: relative;
 
