--- a/src/assets/styles/components/_product-card2.scss
+++ b/src/assets/styles/components/_product-card2.scss
@@ -41,6 +41,8 @@ $root-block-name: '.productCard2';
     }
     img {
       border-radius: 30px 30px 0 0;
+      width: 100%;
+      height: 100%;
     }
 
     position: relative;
