--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -34,13 +34,16 @@ $root-block-name: '.header';
 
   &__menu {
     font-size: 64px;
+    @include screen(lg) {
+      font-size: 32px;
+    }
   }
   &__logo {
     margin-left: 40px;
-    @include w_h(132px, 132px);   
+    @include w_h(132px, 132px);
     @include screen(lg) {
       margin-left: 8px;
-      @include w_h(68px, 68px); 
+      @include w_h(68px, 68px);
     }
     &-img {
       @include w_h(100%, 100%);
@@ -134,12 +137,19 @@ $root-block-name: '.header';
     @include flex(center, center);
     width: 110px;
     height: 55px;
+
     border-radius: 10px;
     border: 2px solid #000;
     font-family: Noto Sans TC;
     font-size: 25px;
     font-weight: 500;
-
+    @include screen(lg) {
+      width: 58px;
+      height: 29px;
+      font-family: Noto Sans TC;
+      font-size: 14px;
+      font-weight: 400;
+    }
     &--login {
       background: #eb9838;
       color: #fff;
