--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -5,16 +5,21 @@ $root-block-name: '.header';
   $p__text: #{$p}__text;
   $p__logo-img: #{$p}__logo-img;
 
-  width: 100vw;
+  width: 100%;
   @include flex(null, null, column);
 
   &__main {
     @include w_h(100%, 147px);
     @include flex(center, null);
-    padding: 12px 120px;
+    padding: 0 12%;
     background: #fff5ea;
     @include screen(lg) {
-      padding: 12px 16px;
+      padding: 0 4%;
+    }
+    @include screen(md) {
+      padding: 0 4%;
+      height: 82px;
+      order: 2;
     }
   }
 
@@ -23,30 +28,38 @@ $root-block-name: '.header';
     @include flex(center, center);
     background: #ffce58;
     overflow: hidden;
+    padding: 0 12%;
+
+    @include screen(md) {
+      padding: 0 4%;
+      height: 54px;
+      order: 1;
+    }
 
     #{$p__text} {
-      font-family: Noto Sans;
       font-size: 18px;
       font-weight: 400;
-      animation: marquee 5s linear infinite;
+      word-break: keep-all;
+      animation: marquee 10s linear infinite;
     }
   }
 
   &__menu {
-    font-size: 64px;
-    @include screen(lg) {
-      font-size: 32px;
+    font-size: 56px;
+    @include screen(md) {
+      font-size: 28px;
     }
   }
   &__logo {
     margin-left: 40px;
     @include w_h(132px, 132px);
-    @include screen(lg) {
+    @include screen(md) {
       margin-left: 8px;
       @include w_h(68px, 68px);
     }
     &-img {
       @include w_h(100%, 100%);
+      object-fit: contain;
     }
   }
 
@@ -54,7 +67,7 @@ $root-block-name: '.header';
     flex: 1;
     margin-left: 62px;
 
-    @include screen(lg) {
+    @include screen(md) {
       margin: 0;
       position: fixed;
       left: 0;
@@ -68,25 +81,27 @@ $root-block-name: '.header';
     }
 
     &--open {
-      @include screen(lg) {
+      @include screen(md) {
         transform: translateX(0);
       }
     }
     &-items {
       @include flex(center);
       gap: 38px;
-      @include screen(lg) {
+      flex-wrap: wrap;
+      @include screen(md) {
         @include flex(null, null, column);
+        gap: 18px;
       }
     }
 
     &-item {
-      width: 100px;
+      min-width: 100px;
       height: 36px;
       font-family: Noto Sans TC;
       font-size: 25px;
       font-weight: 500;
-      @include screen(lg) {
+      @include screen(md) {
         width: 100%;
         @include flex(center, space-between);
         color: #eb9838;
@@ -97,7 +112,7 @@ $root-block-name: '.header';
 
       #{$p__logo-img} {
         display: none;
-        @include screen(lg) {
+        @include screen(md) {
           @include flex;
           width: 108px;
           height: 108px;
@@ -106,7 +121,7 @@ $root-block-name: '.header';
 
       &--logo {
         display: none;
-        @include screen(lg) {
+        @include screen(md) {
           width: 100%;
           height: 120px;
           @include flex(center, center);
@@ -115,7 +130,7 @@ $root-block-name: '.header';
 
       &-icon {
         display: none;
-        @include screen(lg) {
+        @include screen(md) {
           @include flex;
           color: #eb9838;
         }
@@ -124,31 +139,31 @@ $root-block-name: '.header';
   }
 
   &__btns {
+    @include flex(center);
     width: 238px;
     height: 55px;
-    @include flex(center, space-between);
-    @include screen(lg) {
+    gap: 16px;
+    @include screen(md) {
       flex: 1;
       justify-content: end;
-      gap: 16px;
     }
   }
   &__btn {
     @include flex(center, center);
     width: 110px;
     height: 55px;
-
     border-radius: 10px;
     border: 2px solid #000;
-    font-family: Noto Sans TC;
     font-size: 25px;
     font-weight: 500;
-    @include screen(lg) {
+
+    @include screen(md) {
       width: 58px;
-      height: 29px;
-      font-family: Noto Sans TC;
+      height: 28px;
       font-size: 14px;
       font-weight: 400;
+      border-radius: 5px;
+      border: 1.5px solid #000;
     }
     &--login {
       background: #eb9838;
