--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -4,10 +4,9 @@ $root-block-name: '.productCard';
   $p: &;
   $p__text: #{$p}__text;
   $p__img-status: #{$p}__img-status;
-  width: 100%;
-  max-width: 397px;
-  min-height: 549px;
   @include flex(center, center, column);
+  width: 100%;
+  min-height: 550px;
   border-radius: 30px;
   background: #fff;
   &--style2 {
@@ -24,11 +23,14 @@ $root-block-name: '.productCard';
 
   &__img {
     width: 100%;
-    height: 396px;
+    height: 400px;
+
     img {
       border-radius: 30px 30px 0 0;
       width: 100%;
       height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
     position: relative;
 
@@ -42,16 +44,26 @@ $root-block-name: '.productCard';
       background: #fe4206;
       color: #fff;
       @include flex(center, center, column);
+      font-size: 20px;
+      font-weight: 500;
+
+      @include screen(md) {
+        width: 71px;
+        height: 32px;
+        font-size: 14px;
+      }
     }
     &-balance {
       width: 140px;
-      height: 41px;
+      height: 42px;
       background: #eb9838;
       border-radius: 30px;
-      @include flex(center, center, column);
       position: absolute;
       bottom: 8px;
       left: 8px;
+      @include flex(center, center, column);
+      font-size: 20px;
+      font-weight: 500;
       #{$p__text} {
         color: #fff;
         letter-spacing: 2px;
@@ -73,7 +85,6 @@ $root-block-name: '.productCard';
       @include flex(end, null, column);
       height: 50px;
       #{$p__text} {
-        font-family: Noto Sans;
         font-size: 50px;
         font-weight: 600;
         color: #fed706;
