--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -3,6 +3,7 @@ $root-block-name: '.productCard';
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
+  $p__img: #{$p}__img;
   $p__img-status: #{$p}__img-status;
   @include flex(center, center, column);
   width: 100%;
@@ -10,10 +11,20 @@ $root-block-name: '.productCard';
   border-radius: 30px;
   background: #fff;
   &--style2 {
+    max-height: 484px;
+    min-height: auto;
+    border-radius: 60px;
+    margin: 12px;
     #{$p__img-status} {
       top: -20px;
       left: 50%;
       transform: translateX(-50%);
+    }
+
+    #{$p__img} {
+      img {
+        border-radius: 60px 60px 0 0;
+      }
     }
   }
 
@@ -24,7 +35,21 @@ $root-block-name: '.productCard';
   &__img {
     width: 100%;
     height: 400px;
-
+    &::after {
+      content: '';
+      display: flex;
+      width: 100%;
+      height: 50%;
+      position: absolute;
+      z-index: 2;
+      bottom: 0;
+      left: 0;
+      background: linear-gradient(
+        180deg,
+        rgba(217, 217, 217, 0) 0%,
+        rgba(0, 0, 0, 0.9) 95.65%
+      );
+    }
     img {
       border-radius: 30px 30px 0 0;
       width: 100%;
@@ -52,6 +77,10 @@ $root-block-name: '.productCard';
         height: 32px;
         font-size: 14px;
       }
+    }
+    &-detail {
+      position: relative;
+      z-index: 3;
     }
     &-balance {
       width: 140px;
