--- a/src/assets/styles/components/_m-card.scss
+++ b/src/assets/styles/components/_m-card.scss
@@ -14,6 +14,12 @@ $root-block-name: '.mcard';
     min-height: 636px;
   }
 
+  &--login {
+    @include screen(xs) {
+      min-height: 478px;
+    }
+  }
+
   &__header {
     padding: 16px 0;
     height: 74px;
