--- a/src/assets/styles/pages/_product.scss
+++ b/src/assets/styles/pages/_product.scss
@@ -13,6 +13,11 @@ $root-block-name: '.product';
       font-weight: 400;
       text-shadow: -2px 0 1px #000, 0 2px 1px #000, 2px 0 1px #000,
         0 -2px 1px #000;
+
+      @include screen(md) {
+        font-size: 30px;
+        font-weight: 400;
+      }
     }
   }
   &__btns {
@@ -31,6 +36,14 @@ $root-block-name: '.product';
     font-size: 25px;
     font-weight: 400;
 
+    @include screen(md) {
+      width: 157px;
+      height: 34px;
+      border: 1.5px solid #000000;
+      font-family: Noto Sans;
+      font-size: 15px;
+      font-weight: 400;
+    }
     &--active {
       background: #fed706;
     }
