--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'components/dialog/dialog';
 @import 'components/dialog/confirm-dialog';
 @import 'components/slider';
+@import 'components/breadcrumbs';
 // Layout
 @import 'layout/header';
 @import 'layout/footer';
