--- a/src/assets/styles/pages/_product-detail-one.scss
+++ b/src/assets/styles/pages/_product-detail-one.scss
@@ -1,21 +1,19 @@
 $root-block-name: '.product-detail-one';
+
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
   $p__item: #{$p}__item;
-
-  @include flex(center, center, column);
-  @include screen(lg) {
-    padding: 8px;
-    width: 100%;
+  padding: 0 16px;
+  @include screen(md) {
+    padding: 16px;
   }
   &__main {
-    width: 100%;
     display: grid;
     grid-template-columns: 450px 1fr;
     grid-template-rows: auto 2fr;
-    @include screen(lg) {
-      grid-template-columns: 100%;
+    @include screen(md) {
+      grid-template-columns: 1fr;
       grid-auto-rows: auto;
     }
   }
@@ -24,44 +22,104 @@ $root-block-name: '.product-detail-one';
     @include w_h(100%, 450px);
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
-    @include screen(lg) {
+    @include screen(md) {
       grid-column: 1/-1;
-      grid-row: 1;
+      grid-row: 2;
+      margin-left: 0;
+      height: 600px;
+    }
+    @include screen(xs) {
+      height: 335px;
     }
     img {
       @include w_h(100%, 100%);
       border-radius: 54px;
+      object-fit: cover;
+      object-position: top center;
     }
   }
 
   &__title {
     grid-column: 2 / span 1;
-    margin-left: 32px;
+    margin-left: 60px;
     @include screen(lg) {
+      margin-left: 40px;
+    }
+    @include screen(md) {
       grid-column: 1/-1;
-      grid-row: 2;
+      grid-row: 1;
       margin-left: 0;
+      margin-bottom: 32px;
     }
     #{ $p__text } {
       font-size: 35px;
       font-weight: 800;
     }
   }
+
+  &__other {
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+    margin-top: 40px;
+    margin-left: 60px;
+    @include screen(lg) {
+      margin-left: 40px;
+    }
+    @include screen(md) {
+      grid-column: 1/-1;
+      grid-row: 3;
+      margin-left: 0;
+    }
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    gap: 8px;
+
+    @include screen(lg) {
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 16px;
+    }
+
+    &-img {
+      @include w_h(100%, 100%);
+      max-width: 180px;
+      max-height: 180px;
+      @include screen(md) {
+        max-width: 90px;
+        max-height: 90px;
+      }
+      img {
+        @include w_h(100%, 100%);
+        border-radius: 20px;
+        object-fit: contain;
+        object-position: top center;
+      }
+    }
+  }
+
   &__action {
-    margin-left: 32px;
+    margin-left: 60px;
     @include flex(start, center, column);
     gap: 64px;
     @include screen(lg) {
       @include flex(center, center, column);
-      margin-left: 0;
+      margin-left: 40px;
       gap: 24px;
+    }
+    @include screen(md) {
     }
     &-btns {
-      @include flex(start, center);
+      @include flex(start);
       gap: 24px;
+      width: 100%;
+      @include screen(md) {
+        @include flex(start, center);
+        margin-bottom: 36px;
+      }
     }
     &-btn {
-      width: 265px;
+      width: 100%;
+      max-width: 265px;
       height: 72px;
 
       @include flex(center, center);
@@ -71,17 +129,19 @@ $root-block-name: '.product-detail-one';
 
       font-size: 36px;
       font-weight: 900;
-      @include screen(lg) {
-        width: 156px;
+      @include screen(md) {
+        width: 100%;
+        max-width: 156px;
         height: 46.1px;
 
         font-size: 20px;
         font-weight: 900;
       }
       &--status {
-        width: 360px;
-        @include screen(lg) {
-          width: 196px;
+        max-width: 360px;
+        @include screen(md) {
+          width: 100%;
+          max-width: 196px;
           height: 42px;
         }
         background: #ffce58;
@@ -103,9 +163,11 @@ $root-block-name: '.product-detail-one';
     color: #7c7c7c;
     height: 132px;
     padding: 18px 0;
-
+    @include screen(md) {
+    }
     &-money {
       @include flex(center, end);
+
       #{$p__text} {
         line-height: 1;
 
@@ -136,17 +198,24 @@ $root-block-name: '.product-detail-one';
 
   &__infos {
     @include flex(null, space-between);
-    margin: 24px 0;
-    @include screen(lg) {
-      @include flex(center, center, column);
-      gap: 24px;
+    margin: 64px 0;
+    @include screen(md) {
+      @include flex(null, null, column);
+      gap: 16px;
     }
   }
 
   &__info {
-    &--one {
+    width: 348px;
+    @include screen(md) {
       width: 100%;
-
+    }
+    @include screen(md) {
+      width: 100%;
+    }
+    &--one {
+      @include flex(null, null, column);
+      gap: 16px;
       #{$p__item} {
         @include flex;
         &-name {
@@ -160,8 +229,11 @@ $root-block-name: '.product-detail-one';
 
     &--two {
       color: #fe4206;
-      width: 100%;
+      width: 741px;
       @include flex(null, null, column);
+      @include screen(md) {
+        width: 100%;
+      }
       #{$p__item} {
         &-name {
         }
@@ -171,22 +243,26 @@ $root-block-name: '.product-detail-one';
     }
   }
 
-  &__item {
-    font-size: 24px;
-    font-weight: 400;
-  }
-
   &__products {
     padding: 24px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 16px;
+    justify-items: center;
+    @include screen(lg) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @include screen(md) {
+      grid-template-columns: 1fr;
+      padding: 8px;
+      gap: 16px;
+    }
   }
 
   &__productIntroduce {
     padding: 24px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr;
     gap: 16px;
     &-img {
       img {
@@ -202,29 +278,52 @@ $root-block-name: '.product-detail-one';
   }
 
   &__tickets {
-    padding: 24px;
+    padding: 0 64px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: 125px;
     gap: 16px;
+
+    @include screen(lg) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    @include screen(md) {
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: auto;
+      padding: 24px 12px;
+    }
+
     &-img {
       @include flex(center, center);
       img {
         height: 100%;
+        object-fit: contain;
       }
     }
   }
 
   &__boxs {
-    padding: 24px;
+    padding: 0 64px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-auto-rows: 180px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 190px;
     gap: 16px;
+
+    @include screen(lg) {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-auto-rows: 110px;
+    }
+    @include screen(md) {
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: auto;
+      padding: 24px 12px;
+    }
+
     &-img {
       @include flex(center, center);
       img {
         height: 100%;
+        object-fit: contain;
       }
     }
   }
@@ -239,22 +338,26 @@ $root-block-name: '.product-detail-one';
   }
   &__btns {
     position: absolute;
-    @include flex;
-
+    @include flex(null, center);
     gap: 16px;
-    top: 64px;
-    left: 50%;
-    transform: translate(-50%);
+    width: 100%;
+    padding-top: 64px;
   }
   &__btn {
     @include w_h(168px, 54px);
+    width: 100%;
+    max-width: 168px;
     @include flex(center, center);
     border: 2px solid #000;
     border-radius: 50px;
 
     font-size: 25px;
     font-weight: 400;
-
+    @include screen(md) {
+      max-width: 120px;
+      width: 100%;
+      font-size: 14px;
+    }
     &--random {
       background: #fed706;
     }
@@ -262,6 +365,22 @@ $root-block-name: '.product-detail-one';
     &--im {
       background: #fe4206;
       color: #fff;
+    }
+  }
+}
+
+.mcard--product-detail-one {
+  margin-bottom: 36px;
+  .product-detail-one__text {
+    margin: 40px 0;
+    @include flex(center, center);
+    font-size: 30px;
+    font-weight: 400;
+
+    color: #fe4206;
+    @include screen(md) {
+      font-size: 20px;
+      margin: 8px 0;
     }
   }
 }
