--- a/src/assets/styles/pages/_product-detail-one.scss
+++ b/src/assets/styles/pages/_product-detail-one.scss
@@ -263,6 +263,8 @@ $root-block-name: '.product-detail-one';
     padding: 24px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-auto-flow: row dense;
+
     gap: 16px;
     &-img {
       img {
