--- a/src/assets/styles/pages/_product-detail-one.scss
+++ b/src/assets/styles/pages/_product-detail-one.scss
@@ -355,7 +355,7 @@ $root-block-name: '.product-detail-one';
 
     font-size: 25px;
     font-weight: 400;
-    @include screen(md) {
+    @include screen(xs) {
       max-width: 120px;
       width: 100%;
       font-size: 14px;
