--- a/src/assets/styles/components/_product-card2.scss
+++ b/src/assets/styles/components/_product-card2.scss
@@ -43,6 +43,8 @@ $root-block-name: '.productCard2';
       border-radius: 30px 30px 0 0;
       width: 100%;
       height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
 
     position: relative;
