--- a/src/assets/styles/pages/_product-detail.scss
+++ b/src/assets/styles/pages/_product-detail.scss
@@ -216,15 +216,15 @@ $root-block-name: '.product-detail';
 
       padding: 24px;
       display: grid;
-      grid-template-columns: 400px 400px 400px;
+      grid-template-columns: 1fr 1fr 1fr;
       gap: 16px;
       justify-items: center;
 
       @include screen(lg) {
-        grid-template-columns: 400px 400px;
+        grid-template-columns: 1fr 1fr;
       }
       @include screen(md) {
-        grid-template-columns: 400px;
+        grid-template-columns: 1fr;
         padding: 8px;
         gap: 16px;
       }
