--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -5,11 +5,12 @@ $root-block-name: '.productCard';
   $p__text: #{$p}__text;
   $p__img: #{$p}__img;
   $p__img-status: #{$p}__img-status;
-  @include flex(center, center, column);
-  width: 100%;
+  width: fit-content;
   min-height: 550px;
   border-radius: 30px;
   background: #fff;
+  position: relative;
+
   &--style2 {
     max-height: 484px;
     min-height: auto;
@@ -33,8 +34,6 @@ $root-block-name: '.productCard';
   }
 
   &__img {
-    width: 100%;
-    height: 400px;
     &::after {
       content: '';
       display: flex;
@@ -52,10 +51,7 @@ $root-block-name: '.productCard';
     }
     img {
       border-radius: 30px 30px 0 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
+      object-fit: contain;
     }
     position: relative;
 
@@ -140,8 +136,7 @@ $root-block-name: '.productCard';
   }
 
   &__detail {
-    flex: 1;
-    width: 100%;
+    width: 0;
     @include flex(null, null, column);
     padding: 16px;
     gap: 8px;
@@ -149,16 +144,15 @@ $root-block-name: '.productCard';
     &-title {
       font-size: 22px;
       font-weight: 500;
+      position: absolute;
+      left: 8px;
+      right: 8px;
     }
 
-    &-content {
+    &-text {
       color: #7c7c7c;
       font-size: 14px;
       font-weight: 500;
-      @include line-clamp(4);
-      @include screen(md) {
-        @include line-clamp(5);
-      }
     }
   }
 
