--- a/src/assets/styles/components/_product-card2.scss
+++ b/src/assets/styles/components/_product-card2.scss
@@ -4,13 +4,8 @@ $root-block-name: '.productCard2';
   $p: &;
   $p__text: #{$p}__text;
   $p__img-status: #{$p}__img-status;
-
   $p__img-balance: #{$p}__img-balance;
-  width: 100%;
-  min-height: 549px;
-  @include flex(null, null, column);
   border-radius: 30px;
-  background: #fff;
   &--a {
     #{$p__img-balance} {
       background: #fe4206;
@@ -23,43 +18,51 @@ $root-block-name: '.productCard2';
   }
 
   &__img {
-    width: 100%;
-    height: 100%;
     position: relative;
     &::after {
       content: '';
-      display: block;
+      display: flex;
       width: 100%;
-      height: 100%;
+      height: 50%;
+      position: absolute;
+      z-index: 2;
+      bottom: 0;
+      left: 0;
       background: linear-gradient(
         180deg,
         rgba(217, 217, 217, 0) 0%,
         rgba(0, 0, 0, 0.9) 95.65%
       );
-      position: absolute;
-      top: 0;
     }
     img {
       border-radius: 30px 30px 0 0;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
+      height: auto;
     }
-
-    position: relative;
 
     &-status {
       width: 93px;
       height: 41px;
       position: absolute;
-      top: 8px;
+      top: 12px;
       left: 8px;
       border-radius: 30px;
       background: #fe4206;
       color: #fff;
       @include flex(center, center, column);
     }
+
+    &-pHeightText {
+      position: absolute;
+      bottom: 8px;
+      right: 40px;
+      z-index: 3;
+      font-size: 16px;
+      font-weight: 400;
+      color: #fff;
+      letter-spacing: 1px;
+    }
+
     &-balance {
       width: 260px;
       height: 56px;
@@ -70,11 +73,20 @@ $root-block-name: '.productCard2';
       position: absolute;
       bottom: -24px;
       left: 8px;
-      z-index: 2;
+      z-index: 3;
+
+      @include screen(md) {
+        width: 152px;
+        height: 43px;
+        font-size: 20px;
+      }
       #{$p__text} {
         color: #fff;
         letter-spacing: 2px;
 
+        &--title {
+          font-weight: 900;
+        }
         &--num {
         }
       }
@@ -82,15 +94,16 @@ $root-block-name: '.productCard2';
   }
 
   &__detail {
-    flex: 1;
     width: 100%;
     @include flex(null, null, column);
     padding: 32px 16px;
     gap: 8px;
     border-radius: 0 0 30px 30px;
+    background: #fff;
     &-title {
       font-size: 24px;
       font-weight: 400;
+      @include line-clamp(2);
     }
   }
 
