--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'components/m-card';
 @import 'components/product-card';
 @import 'components/product-card2';
+@import 'components/product-card3';
 @import 'components/dialog/dialog';
 @import 'components/dialog/confirm-dialog';
 @import 'components/slider';
@@ -26,6 +27,8 @@
 @import 'pages/register';
 @import 'pages/mainpage';
 @import 'pages/product';
+@import 'pages/product2';
+@import 'pages/product3';
 @import 'pages/product-detail';
 @import 'pages/product-detail-one';
 // themes
